# grantlee-editor

./: .craft.ini  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  grantleeditor.categories  grantleeditor.renamecategories  grantleeeditor-version.h.cmake
contactprintthemeeditor/: CMakeLists.txt  contactprintthemeconfiguredialog.cpp  contactprintthemeconfiguredialog.h  contactprintthemeeditor.qrc  contactprintthemeeditorui.rc  contactprintthemeeditorutil.cpp  contactprintthemeeditorutil.h  contactprintthemepreview.cpp  contactprintthemepreview.h  defaultcompletion.cpp  defaultcompletion.h  editorpage.cpp  editorpage.h  main.cpp  org.kde.contactprintthemeeditor.desktop  themedefaulttemplate.cpp  themedefaulttemplate.h  themeeditormainwindow.cpp  themeeditormainwindow.h  themeeditorpage.cpp  themeeditorpage.h  themeeditorwidget.cpp  themeeditorwidget.h  themetemplatewidget.cpp  themetemplatewidget.h
contactthemeeditor/: CMakeLists.txt  contactconfigurationdialog.cpp  contactconfigurationdialog.h  contactdefaulttemplate.cpp  contactdefaulttemplate.h  contacteditormainwindow.cpp  contacteditormainwindow.h  contacteditorpage.cpp  contacteditorpage.h  contacteditorutil.cpp  contacteditorutil.h  contacteditorwidget.cpp  contacteditorwidget.h  contactpreviewwidget.cpp  contactpreviewwidget.h  contacttemplatewidget.cpp  contacttemplatewidget.h  contactthemeeditor.qrc  contactthemeeditorui.rc  defaultcompletion.cpp  defaultcompletion.h  editorpage.cpp  editorpage.h  main.cpp  org.kde.contactthemeeditor.desktop  previewwidget.cpp  previewwidget.h
doc/: CMakeLists.txt
doc/contactthemeeditor/: index.docbook
doc/headerthemeeditor/: index.docbook
grantleethemeeditor/: CMakeLists.txt  config-grantleethemeeditor.h.cmake  configurewidget.cpp  configurewidget.h  desktopfilepage.cpp  desktopfilepage.h  editorpage.cpp  editorpage.h  editorwidget.cpp  editorwidget.h  grantleeplaintexteditor.cpp  grantleeplaintexteditor.h  managethemes.cpp  managethemes.h  newthemedialog.cpp  newthemedialog.h  previewwidget.cpp  previewwidget.h  themeeditortabwidget.cpp  themeeditortabwidget.h  themesession.cpp  themesession.h
grantleethemeeditor/settings/: globalsettings_base.kcfgc  grantleethemeeditor.kcfg
headerthemeeditor/: CMakeLists.txt  README.theme  defaultcompletion.cpp  defaultcompletion.h  editorpage.cpp  editorpage.h  headerthemeeditor.qrc  headerthemeeditorui.rc  main.cpp  org.kde.headerthemeeditor.desktop  previewwidget.cpp  previewwidget.h  themeconfiguredialog.cpp  themeconfiguredialog.h  themedefaulttemplate.cpp  themedefaulttemplate.h  themeeditormainwindow.cpp  themeeditormainwindow.h  themeeditorpage.cpp  themeeditorpage.h  themeeditorutil.cpp  themeeditorutil.h  themeeditorwidget.cpp  themeeditorwidget.h  themetemplatewidget.cpp  themetemplatewidget.h
po/ar/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ast/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/bg/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/bs/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ca/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ca@valencia/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/cs/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/da/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/de/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/el/: headerthemeeditor.po
po/en_GB/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/eo/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/es/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/et/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/eu/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/fi/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/fr/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ga/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/gl/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/he/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/hi/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/hu/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ia/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/it/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ja/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ka/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/kk/: contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/ko/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/lt/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/mr/: headerthemeeditor.po
po/nb/: contactprintthemeeditor.po  contactthemeeditor.po  headerthemeeditor.po  libgrantleethemeeditor.po
po/nds/: contactthemeeditor.po  headerthemeeditor.po  (+1 more)
(+90 files in other folders)
